# dotlink

./: Cargo.toml  LICENSE  README.md  crates-io.md  dotlink.example.json  dotlink.example.toml  dotlink.example.yaml
.github/workflows/: ci.yaml
src/: context.rs  expand.rs  link.rs  load.rs  main.rs  parse.rs  preset.rs  print.rs  utils.rs
src/preset/: entries.rs  error.rs
