[package]
name = "dotlink"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "No non-sense dotfiles linker"
repository = "https://github.com/TheRealLorenz/dotlink"
readme = "README.md"
keywords = ["dotfiles", "link", "symlink", "management"]
categories = ["command-line-utilities", "config", "filesystem"]
exclude = [
  "dotlink.example.*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.7.3"
directories = "5.0.0"
colored = "2.0.0"
serde_yaml = "0.9.21"
clap = { version = "4.1.8", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"

[dev-dependencies]
tempfile = "3.5.0"
