[package]
name = "dotlink"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "No non-sense dotfiles linker"
repository = "https://github.com/TheRealLorenz/dotlink"
readme = "crates-io.md"
keywords = ["dotfiles", "link", "symlink", "management"]
categories = ["command-line-utilities", "config", "filesystem"]
exclude = [
  "dotlink.example.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.1.8", features = ["derive"] }
colored = "2.0.0"
directories = "5.0.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7.3"

[dev-dependencies]
tempfile = "3.5.0"
